# shrun

./: .gitignore  CMakeLists.txt  LICENSE  README.md  shrun.py
examples/: README.md
src/: main.c  shrun.c  shrun.def  shrun.h
